--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ height: 600px;
 .grap{
     padding: 20px;
 }
-.small{
+.top-logo{
     width: 200px;
 }
 .text{
@@ -14,7 +14,7 @@ height: 600px;
 .margin-top{
     margin-bottom: 45px;
 }
-.sign{
+.sign-button{
     border: 1px solid #21b573;
     background-color: #21b573;
     border-radius: 50px;
@@ -106,7 +106,7 @@ font-size: 3px;
     color: #000000;
     margin-top: 50px;
 }
-.img-fluid{
+.img-fluid1{
     width: 80px;
     margin-left: 150px;
     margin-top: 100px;
